add shopcar's statistics and update log

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,10 +83,10 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a><i class="layui-icon layui-icon-set"></i>&emsp;<cite>系统管理</cite></a>
+                    <a><i class="layui-icon layui-icon-set"></i>&emsp;<cite>博客管理</cite></a>
                     <dl class="layui-nav-child">
                         <dd><a lay-href="/cata"><i class="layui-icon layui-icon-table">&emsp;分类管理</i></a></dd>
-                        <dd><a lay-href="/boke"><i class="layui-icon layui-icon-table">&emsp;博客管理</i></a></dd>
+                        <dd><a lay-href="/blog"><i class="layui-icon layui-icon-table">&emsp;博客管理</i></a></dd>
                         <dd><a lay-href="/comment"><i class="layui-icon layui-icon-table">&emsp;评论管理</i></a></dd>
                         <dd><a lay-href="/user"><i class="layui-icon layui-icon-friends">&emsp;用户管理</i></a></dd>
                         <dd><a lay-href="/score"><i class="layui-icon layui-icon-praise">&emsp;评分管理</i></a></dd>
@@ -97,6 +97,8 @@
                     <dl class="layui-nav-child">
                         <dd><a lay-href="/reportYear"><i class="layui-icon layui-icon-date">&emsp;博客月度发表统计</i></a></dd>
                         <dd><a lay-href="/reportByYear"><i class="layui-icon layui-icon-date">&emsp;博客年度度发表统计</i></a></dd>
+                        <dd><a lay-href="/reportYearForOrder"><i class="layui-icon layui-icon-date">&emsp;购物车月度订单增加统计</i></a></dd>
+                        <dd><a lay-href="/reportByYearForOrder"><i class="layui-icon layui-icon-date">&emsp;购物车年度订单增加统计</i></a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -127,7 +129,7 @@
     <!-- 底部 -->
     <div class="layui-footer">
         copyright © 2021 <a target="_blank">LGD</a> all rights reserved.
-        <span class="pull-right">Version 3.1.0</span>
+        <span class="pull-right">Version 3.2.0</span>
     </div>
 </div>
 
