--- a/src/main/resources/templates/page/template/logins.html
+++ b/src/main/resources/templates/page/template/logins.html
@@ -25,7 +25,7 @@
 <body>
 <div class="login-wrapper">
   <div class="login-header">
-    <img src="../../assets/images/logo.png"> 博客管理系统
+    <img src="../../assets/images/logo.png"> 博客购物学习系统
   </div>
   <div class="login-body">
     <div class="layui-card">
@@ -77,7 +77,7 @@
 </div>
 
 <!-- js部分 -->
-<script src="../../assets/js/jquery-1.7.2.min.js" type="text/javascript"></script>
+<script src="../../assets/libs/jquery/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="../../assets/js/drag.js" type="text/javascript"></script>
 <script type="text/javascript" src="../../assets/libs/layui/layui.js"></script>
 <script type="text/javascript" src="../../assets/js/common.js?v=315"></script>
