--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -75,13 +75,15 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V3.1.0
-                                <small>完善了购物模块</small>&emsp;
-                                <span class="layui-badge-rim">2021-12-8</span>
+                                V3.2.0
+                                <small>完善了购物体验</small>&emsp;
+                                <span class="layui-badge-rim">2021-12-8~10</span>
                             </h3>
                             <ul>
                                 <li>实现了商品选购的搜索功能</li>
                                 <li>实现了购物车的搜索功能</li>
+                                <li>添加了购物车订单的统计月度与年度功能</li>
+                                <li>使用Redis优化了一些不怎么改动数据的查询效率</li>
                             </ul>
                         </div>
                     </li>
@@ -257,6 +259,11 @@
                         <tr>
                             <td>权限框架</td>
                             <td>Shiro、JwtPermission(API接口权限)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>中间件</td>
+                            <td>Redis(缓存数据库)
                             </td>
                         </tr>
                         <tr>
