--- a/src/main/resources/templates/page/template/reportYearForOrder.html
+++ b/src/main/resources/templates/page/template/reportYearForOrder.html
@@ -56,7 +56,7 @@
       if(year===""){
         year=new Date().getFullYear();
       }
-      $.post("/reportYearBoke",{year:year},function(data){
+      $.post("/reportYearForOrder",{year:year},function(data){
 
         //alert(data);
 
@@ -66,7 +66,7 @@
         option = null;
         option = {
           title : {
-            text: '博客全站发文量月度统计',
+            text: '全站购物订单月度统计',
             x:'center'
           },
           tooltip : {
