improving a bug and improve yzm

--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -75,7 +75,19 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V3.2.0
+                                <small>简单部署上线</small>&emsp;
+                                <span class="layui-badge-rim">2022-2-7~9</span>
+                            </h3>
+                            <ul>
+                                <li>修复购物车条数bug</li>
+                                <li>实现用nginx反向代理网站80端口</li>
+                                <li>进行了域名购买，解析，简单备案以及上线</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                        <div class="layui-timeline-content layui-text">
+                            <h3 class="layui-timeline-title">
                                 <small>完善了购物体验</small>&emsp;
                                 <span class="layui-badge-rim">2021-12-8~10</span>
                             </h3>
@@ -90,7 +102,6 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V3.0.0
                                 <small>丰富了评分，增加了购物模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-12-2~4</span>
                             </h3>
@@ -107,7 +118,6 @@
                     <li class="layui-timeline-item"><i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.3.0
                                 <small>完善了评分的机制</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-23~25</span>
                             </h3>
@@ -124,7 +134,6 @@
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.2.0
                                 <small>增加了统计模块与学习模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-19</span>
                             </h3>
@@ -138,7 +147,6 @@
                     <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.1.1
                                 <small>修饰了一下页面</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-18</span>
                             </h3>
@@ -153,7 +161,6 @@
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.1.0
                                 <small>增加了评分模块</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-17</span>
                             </h3>
@@ -167,7 +174,6 @@
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V2.0.0
                                 <small>基本实现简单功能</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-10</span>
                             </h3>
@@ -184,7 +190,6 @@
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">
-                                V1.0.0
                                 <small>搭建好前端静态页面</small>&emsp;
                                 <span class="layui-badge-rim">2021-11-02</span>
                             </h3>
