improving addUser's permission and give sql

--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -58,11 +58,11 @@
         <div align="center" style="margin-bottom: 20px;">
             <div class="layui-carousel" id="test1">
                 <div carousel-item>
-                    <div><img src="././images/bg.jpg" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="././images/bg2.jpg" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="././images/bg3.png" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="././images/bg4.jpg" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="././images/bg5.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg2.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg3.png" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg4.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg5.jpg" class="pic" style="width: 100%;height: auto"/></div>
                 </div>
             </div>
     </div>
@@ -79,6 +79,7 @@
                                 <span class="layui-badge-rim">2022-2-7~9</span>
                             </h3>
                             <ul>
+                                <li>对于封面轮播图使用OSS方式存储，节约服务器宝贵小几M的上传资源</li>
                                 <li>修复购物车条数bug</li>
                                 <li>实现用nginx反向代理网站80端口</li>
                                 <li>进行了域名购买，解析，简单备案以及上线</li>
