improving oss's url to localhost's url

--- a/src/main/resources/templates/page/console/introduction.html
+++ b/src/main/resources/templates/page/console/introduction.html
@@ -58,11 +58,16 @@
         <div align="center" style="margin-bottom: 20px;">
             <div class="layui-carousel" id="test1">
                 <div carousel-item>
-                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg.jpg" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg2.jpg" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg3.png" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg4.jpg" class="pic" style="width: 100%;height: auto"/></div>
-                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg5.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="../../images/bg.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="../../images/bg2.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="../../images/bg3.png" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="../../images/bg4.jpg" class="pic" style="width: 100%;height: auto"/></div>
+                    <div><img src="../../images/bg5.jpg" class="pic" style="width: 100%;height: auto"/></div>
+<!--                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg.jpg" class="pic" style="width: 100%;height: auto"/></div>-->
+<!--                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg2.jpg" class="pic" style="width: 100%;height: auto"/></div>-->
+<!--                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg3.png" class="pic" style="width: 100%;height: auto"/></div>-->
+<!--                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg4.jpg" class="pic" style="width: 100%;height: auto"/></div>-->
+<!--                    <div><img src="http://bucket-hangzhou-lgd.oss-cn-hangzhou.aliyuncs.com/bg/bg5.jpg" class="pic" style="width: 100%;height: auto"/></div>-->
                 </div>
             </div>
     </div>
