--- a/src/main/resources/templates/page/template/scores.html
+++ b/src/main/resources/templates/page/template/scores.html
@@ -160,6 +160,7 @@
       headers : {
         Authorization: '[[${session.token}]]'
       },
+      autoSort: false,
       cellMinWidth: 100,
       cols: [
         [
@@ -176,6 +177,31 @@
         ]
       ]
     });
+
+    // 自定义排序事件
+    table.on('sort(tableBook)', function(obj){
+      table.reload('tableBook', {
+        initSort: obj //记录初始排序
+        , where: {
+          field: obj.field //排序字段
+          , order: obj.type //排序方式
+        }
+      });
+    });
+    /*table.on('sort(tableBook)', function(obj){ //注：sort是写死的，监听的是表头的排序按钮的点击事件，test是table原始容器的属性 lay-filter="对应的值"
+      console.log(obj.field); //当前排序的字段名
+      console.log(obj.type); //当前排序类型：desc（降序）、asc（升序）、null（空对象，默认排序）
+      console.log(this); //当前排序的 th 对象
+      //尽管我们的 table 自带排序功能，但并没有请求服务端。
+      //有些时候，你可能需要根据当前排序的字段，重新向服务端发送请求，从而实现服务端排序，如：
+      table.reload('tableBook', { //testTable是表格容器id
+        initSort: obj //记录初始排序，如果不设的话，将无法标记表头的排序状态。 layui 2.1.1 新增参数
+        ,where: { //请求参数（注意：这里面的参数可任意定义，并非下面固定的格式）
+          field: obj.field //排序字段 对应的表头参数的filed值，
+          ,order: obj.type //排序方式  desc||asc
+        }
+      });
+    });*/
 
     // 添加
     $('#btnAddBook').click(function () {
